samples/_failures_safe/1761002238_392bf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6286b9aa.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6286b9aa.c:171:5: error: expected expression at end of input
  171 |     int token_count =
      |     ^~~
./samples/SAFE/__tmp_6286b9aa.c:171:5: error: expected declaration or statement at end of input
